--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -76,21 +73,42 @@
           </div>
         </div>
       </div>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
-      <p>about content</p>
+      <div class="alert alert-dark" role="alert">
+        DAFFODILS!
+      </div>
+
+      <p>
+        I wandered lonely as a cloud<br>
+        That floats on high o'er vales and hills,<br>
+        When all at once I saw a crowd,<br>
+        A host, of golden daffodils;<br>
+        Beside the lake, beneath the trees,<br>
+        Fluttering and dancing in the breeze.<br>
+      </p>
+      <p>
+        Continuous as the stars that shine<br>
+        And twinkle on the milky way,<br>
+        They stretched in never-ending line<br>
+        Along the margin of a bay:<br>
+        Ten thousand saw I at a glance,<br>
+        Tossing their heads in sprightly dance.<br>
+      </p>
+      <p>
+        The waves beside them danced; but they<br>
+        Out-did the sparkling waves in glee:<br>
+        A poet could not but be gay,<br>
+        In such a jocund company:<br>
+        I gazed—and gazed—but little thought<br>
+        What wealth the show to me had brought:<br>
+      </p>
+      <p>        
+        For oft, when on my couch I lie<br>
+        In vacant or in pensive mood,<br>
+        They flash upon that inward eye<br>
+        Which is the bliss of solitude;<br>
+        And then my heart with pleasure fills,<br>
+        And dances with the daffodils.<br>
+      </p>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
       <script src="app.js"></script>
